# c64-konsool

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/src/: BLEKB.cpp  BLEKB.h  C64Emu.cpp  C64Emu.hpp  CIA.cpp  CIA.hpp  CMakeLists.txt  CPU6502.cpp  CPUC64.cpp  CPUC64.hpp  Config.hpp  ConfigBoard.hpp  ConfigDisplay.h  DisplayDriver.hpp  ExternalCmds.cpp  ExternalCmds.hpp  GfxP4.cpp  GfxP4.hpp  HardwareInitializationException.h  Joystick.cpp  Joystick.hpp  JoystickInitializationException.h  KonsoolKB.cpp  KonsoolKB.hpp  Pax.cpp  Pax.hpp  RM67162.cpp  SDCard.cpp  SDCard.hpp  ST7789V.cpp  ST7789V.hpp  T_DISPLAY_S3.h  T_HMI.cpp  T_HMI.hpp  VIC.cpp  VIC.hpp  kbmatrix.hpp  konsoolled.cpp  konsoolled.hpp  listactions.h  (+1 more)
main/src/menuoverlay/: LoadMenu.cpp  LoadMenu.hpp  MainMenu.hpp  MenuBaseClass.cpp  MenuBaseClass.hpp  MenuController.cpp  MenuController.hpp  MenuDataStore.cpp  MenuDataStore.hpp  MenuTypes.hpp  mainMenu.cpp
main/src/rm67162/: pins_config.h  rm67162.cpp  rm67162.h
main/src/roms/: basic.h  charset.h  kernal.h
main/src/sid/: i2s.cpp  i2s.hpp  precalc.hpp  sid.cpp  sid.hpp
sdkconfigs/: general  mch2022  tanmatsu
